--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: sans-serif, Arial, Helvetica;
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -14,14 +14,21 @@ body {
 
 .card {
     box-sizing: border-box;
-    width: 300px;
+    width: 350px;
 
     background-color: #501f50;
     padding: 30px;
     border-radius: 10px;
-    color: white;
-    
+    color: #e6dae4;
+
 }
+
+.card p {
+    font-size: 15px;
+    line-height: 20px;
+    font-weight: normal;
+}
+
 
 .card_2 {
     margin-top: 25px;
@@ -34,8 +41,8 @@ body {
 .card_header {
     box-sizing: border-box;
     width: 100%;
-    height: 50px;
-
+    height: 40px;
+    padding: 0;
     display: flex;
 }
 
@@ -48,8 +55,16 @@ body {
 
 .card_header_text {
     box-sizing: border-box;
-    margin-left: 15px;
+    margin-left: 20px;
+    margin-top: -10px;
     height: 10px;
     font-size: 15px;
-    line-height: 5px;
+    line-height: 3px;
 }
+
+.card_header_text_subtitle {
+    color: #aa5189;
+    font-size: 15px;
+    font-weight: normal;
+}
+
