--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,10 @@ body {
     padding: 0;
 }
 
+/* css de la mitad superior */
 .up_section{
     display: flex;
+    box-sizing: border-box;
     background-color: red;
     justify-content: center;
     align-items: center;
@@ -13,21 +15,51 @@ body {
     margin: 40px;
 }
 
+/* css de la seccion welcome que abarca el texto de la parte superior izquierda  */
+
 .welcome_section {
     box-sizing: border-box;
     width: 400px;
+    background-color: wheat;
 }
 
-.stars_section{
+.starts_section{
     box-sizing: border-box;
     width: 400px;
 }
 
+.welcome_header {
+    width: 80%;
+    color: #501f50;
+    font-weight: 900;
+    font-size: 40px;
+}
+
+.welcome_section p {
+    line-height: 25px;
+}
+
+
+/* css de la puntuación con estrellas */
+
+.starts {
+    display: flex;
+    align-items: center;
+    
+    width: 100%;
+    height: 20px;
+    gap: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: #f7f3f8;
+    margin: 10px;
+}
 
 
 
 
 
+/* css de la mitad inferior (las tarjetas) */
 
 .cards_section {
     display: flex;
