--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,14 @@ body {
 .up_section{
     display: flex;
     box-sizing: border-box;
-    background-color: red;
+
     justify-content: center;
     align-items: center;
-    gap: 300px;
-    margin: 40px;
+    
+    justify-content: space-between;
+    padding-left: 220px;
+    padding-right: 250px;
+
 }
 
 /* css de la seccion welcome que abarca el texto de la parte superior izquierda  */
@@ -20,12 +23,12 @@ body {
 .welcome_section {
     box-sizing: border-box;
     width: 400px;
-    background-color: wheat;
 }
 
 .starts_section{
     box-sizing: border-box;
     width: 400px;
+    
 }
 
 .welcome_header {
@@ -49,14 +52,22 @@ body {
     width: 100%;
     height: 20px;
     gap: 10px;
-    padding: 5px;
+    padding: 15px 10px 15px 10px;
     border-radius: 5px;
     background-color: #f7f3f8;
     margin: 10px;
+
+    color: #501f50;
+    font-weight: 900;
 }
 
+.start_1 {
+    margin-left: -100px;
+}
 
-
+.start_2 {
+    margin-left: -50px;
+}
 
 
 /* css de la mitad inferior (las tarjetas) */
