--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,11 @@ body {
     align-items: center;
     
     justify-content: space-between;
-    padding-left: 220px;
-    padding-right: 250px;
 
     padding-top: 75px;
+
+    max-width: 1100px;
+    margin: auto;
 
     /* background-image: url("https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/bg-pattern-top-desktop.svg"); */
 
@@ -35,7 +36,6 @@ body {
 }
 
 .welcome_header {
-    width: 80%;
     color: #501f50;
     font-weight: 900;
     font-size: 40px;
@@ -52,13 +52,13 @@ body {
     display: flex;
     align-items: center;
     
-    width: 100%;
+    max-width: 400px;
     height: 20px;
     gap: 10px;
     padding: 15px 10px 15px 10px;
     border-radius: 5px;
     background-color: #f7f3f8;
-    margin: 10px;
+    margin: 10px 0 0 0;
 
     color: #501f50;
     font-weight: 900;
@@ -72,15 +72,21 @@ body {
     transform: translateX(-50px);
 }
 
+.start_3 {
+    transform: translateX(0px);
+}
+
 
 /* css de la mitad inferior (las tarjetas) */
 
 .cards_section {
-    display: flex;
     box-sizing: border-box;
+    display: flex;
+    max-width: 1100px;
     justify-content: center;
     align-items: center;
     gap: 20px;
+    margin: auto;
 
     /* background-image: url("https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/bg-pattern-bottom-desktop.svg"); */
 }
